--- a/index.html
+++ b/index.html
@@ -105,35 +105,34 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.</p>
+        <p>Hi, I'm a master's student in Department of Power Mechanical Engineering at National Tsing Hua University.I'm currently conducting research in the field of robotic control and hope to further advance in this area in the future.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/xin1.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/ted02.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>NTHU-PME Master's student</h2>
+            <h2>self-introduction</h2>
             <p class="fst-italic py-3">
       
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 Nov. 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 Sep. 2001</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+886-3-5719034#33790</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hsinchu, Taiwan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>shuan.t1122@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Research direction:</strong> <span>Robot</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tedmasted02@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Research direction:</strong> <span>robotic control</span></li>
                 </ul>
               </div>
             </div>
