--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/xin.jpeg" rel="icon">
-  <link href="assets/img/xin1.jpeg" rel="apple-touch-icon">
+  <link href="assets/img/ted.JPG" rel="icon">
+  <link href="assets/img/ted02.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/xin1.jpeg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/ted02.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
