--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.
-          <br>My current research focuses on robotics, deep learning, and AI technologies, with a commitment to applying advanced electrical control techniques to intelligent robots.</p>
+        <p>Greetings. I am currently a student in the Department of Power Mechanical Engineering at National Tsing Hua University, specializing in robotic control within the electrical control division. Motivated by a strong curiosity and enthusiasm for interdisciplinary exploration, I have actively pursued learning opportunities beyond the core curriculum. For instance, during my undergraduate studies, I participated in a laboratory outside my department to gain experience in system simulation. In a separate endeavor, I was also involved in the drafting of a utility model patent. These experiences have greatly enriched my academic journey, and I aspire to maintain this passion for diverse and integrative learning throughout my future career.
+          <br> </p>
       </div><!-- End Section Title -->
 
       <div class="container">
