--- a/index.html
+++ b/index.html
@@ -278,17 +278,18 @@
            
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Department of Electrical Engineering, National Kaohsiung University of Science and Technology</h4>
-              <h5>2019-2023</h5>
+              <h4>B.S. in System and Naval Mechatronic Engineering, National Cheng Kung University</h4>
+              <h5>Sep. 2020 – Jun. 2024</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>Focused on the development of IoT technology and automatic control in university</p>
+              <p>Hull Structure and Stress Analysis — Investigating the mechanical behavior of hull structures through analytical and numerical methods to ensure structural integrity under various loading conditions.
+                 Autonomous Navigation Systems — Developing systems capable of guiding vehicles independently using signal processing and control algorithms.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Master’s Program in Electrical Control Division, Department of Power Mechanical Engineering, Tsinghua University</h4>
-              <h5>2024 - currently</h5>
+              <h4>M.S. in Power Mechanical Engineering (Control Division), National Tsing Hua University </h4>
+              <h5>2025 - currently</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>Robot</p>
+              <p>robotic control</p>
             </div><!-- Edn Resume Item -->
 
           </div>
