--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
               <h4>B.S. in System and Naval Mechatronic Engineering, National Cheng Kung University</h4>
               <h5>Sep. 2020 – Jun. 2024</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>Hull Structure and Stress Analysis — Investigating the mechanical behavior of hull structures through analytical and numerical methods to ensure structural integrity under various loading conditions.
-                 Autonomous Navigation Systems — Developing systems capable of guiding vehicles independently using signal processing and control algorithms.</p>
+              <p>Hull Structure and Stress Analysis — Investigating the mechanical behavior of hull structures through analytical and numerical methods to ensure structural integrity under various loading conditions.</p>
+              <p>Autonomous Navigation Systems — Developing systems capable of guiding vehicles independently using signal processing and control algorithms.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
