--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
       <div class="container">
 
-        <div class="row">
+        <div class="column">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
            
@@ -287,7 +287,7 @@
 
             <div class="resume-item">
               <h4>M.S. in Power Mechanical Engineering (Control Division), National Tsing Hua University </h4>
-              <h5>2025 - currently</h5>
+              <h5>Sep. 2025 - currently</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
               <p>robotic control</p>
             </div><!-- Edn Resume Item -->
@@ -298,8 +298,6 @@
             <h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <h4></h4>
-              <!-- <h5>2019 - Present</h5> -->
-              <!-- <p><em>Experion, New York, NY </em></p> -->
               <ul>
                 <li>IoT Technology</li>
                 <li>AI Technology</li>
