--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
            
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">🎓Education</h3>
             <div class="resume-item">
               <h4>B.S. in System and Naval Mechatronic Engineering, National Cheng Kung University</h4>
               <h5>Sep. 2020 – Jun. 2024</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>Hull Structure and Stress Analysis — Investigating the mechanical behavior of hull structures through analytical and numerical methods to ensure structural integrity under various loading conditions.</p>
-              <p>Autonomous Navigation Systems — Developing systems capable of guiding vehicles independently using signal processing and control algorithms.</p>
+              <p># Hull Structure and Stress Analysis — Investigating the mechanical behavior of hull structures through analytical and numerical methods to ensure structural integrity under various loading conditions.</p>
+              <p># Autonomous Navigation Systems — Developing systems capable of guiding vehicles independently using signal processing and control algorithms.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
@@ -295,13 +295,13 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Skills</h3>
+            <h3 class="resume-title">🧪 Projects & Research</h3>
             <div class="resume-item">
               <h4></h4>
               <ul>
-                <li>IoT Technology</li>
-                <li>AI Technology</li>
-                <li>Robot</li>
+                <li>Ship Structure Analysis-               Analyzed hull structure using Simpson's rule to calculate shear forces and bending moments, followed by result evaluation.</li>
+                <li>Sound Source Guidance-               Used signals received from microphones to analyze frequency changes and guide ship direction accordingly.</li>
+                <li>robotic control</li>
                 <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
             </div><!-- Edn Resume Item -->
