--- a/index.html
+++ b/index.html
@@ -306,6 +306,12 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">🛠 Patent</h3>
+            <div class="resume-item">
+             <li>Holder of a utility model patent in Taiwan: Innovative Hygienic Spoon</li>
+            </div><!-- Edn Resume Item -->
+
             <!-- <div class="resume-item"> -->
               <!-- <h4>Graphic design specialist</h4> -->
               <!-- <h5>2017 - 2018</h5> -->
