--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">🛠 Patent</h3>
             <div class="resume-item">
-             <li>   Holder of a utility model patent in Taiwan: Innovative Hygienic Spoon</li>
+             <li>   Holder of a utility model patent : Innovative Hygienic Spoon</li>
             </div><!-- Edn Resume Item -->
 
             <!-- <div class="resume-item"> -->
@@ -330,7 +330,7 @@
 
       </div>
 
-    </section><!-- /Resume Section -->
+    <!/section!><!-- /Resume Section -->
 
     <!-- Portfolio Section -->
     <!-- <section id="portfolio" class="portfolio section light-background"> -->
@@ -339,7 +339,7 @@
       <!-- <div class="container section-title" data-aos="fade-up"> -->
         <!-- <h2>Portfolio</h2> -->
         <!-- <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.</p> -->
-      </div><!-- End Section Title -->
+      <!/div!><!-- End Section Title -->
 
       <!-- <div class="container"> -->
 
@@ -508,13 +508,13 @@
     <!-- </section>/Portfolio Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section">
+    <!section id="services" class="services section"!>
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.I am available to take on robotics-related projects.</p>
-      </div><!-- End Section Title -->
+      <!div class="container section-title" data-aos="fade-up"!>
+        <!h2>Services</h2!>
+        <!p!>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.I am available to take on robotics-related projects.</p>
+      <!/div><!-- End Section Title --!>
 
       <div class="container">
 
