--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>shuan1122@gapp.nthu.edu.tw</p>
+                  <p>tedmasted02@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
