--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       <!-- Section Title -->
       <!-- <div class="container section-title" data-aos="fade-up"> -->
         <!-- <h2>Portfolio</h2> -->
-        <!-- <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.</p> -->
+        <!-- <!p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.</p> -->
       <!/div!><!-- End Section Title -->
 
       <!-- <div class="container"> -->
@@ -512,8 +512,8 @@
 
       <!-- Section Title -->
       <!div class="container section-title" data-aos="fade-up"!>
-        <!h2>Services</h2!>
-        <!p!>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.I am available to take on robotics-related projects.</p>
+       <!-- <h2>Services</h2>-->
+        <!--  <p>Hello! I am a graduate student in the Electrical Control Division of the Department of Power Mechanical Engineering at Tsinghua University, specializing in robotics technology development.I am available to take on robotics-related projects.</p>-->
       <!/div><!-- End Section Title --!>
 
       <div class="container">
